add user signup swagger annotation
