# server/router/v1/user_signup.go
@@ -13,6 +13,16 @@ func NewUserSignUp() *UserSignUp {
 	return &UserSignUp{}
 }
 
+// PhoneExists godoc
+// @Summary     判断手机号是否已经被注册
+// @Tags         UserSignUp
+// @Accept       json
+// @Produce      json
+// @Param        phone_number   body	string		true	"手机号"
+// @Success      200  {string}  string 			"成功"
+// @Failure      400  {object}  errcode.Error 	"请求错误"
+// @Failure      500  {object}  errcode.Error 	"内部错误"
+// @Router       /api/v1/user/phone [post]
 func (u UserSignUp) PhoneExists(c *gin.Context) {
 	srv := service.NewService(c)
 	param := &service.UserPhoneExistsRequest{}
@@ -36,6 +46,16 @@ func (u UserSignUp) PhoneExists(c *gin.Context) {
 	resp.Ok()
 }
 
+// EmailExists godoc
+// @Summary     判断email是否已经被注册
+// @Tags         UserSignUp
+// @Accept       json
+// @Produce      json
+// @Param        email   body	string		true	"用户email"
+// @Success      200  {string}  string 			"成功"
+// @Failure      400  {object}  errcode.Error 	"请求错误"
+// @Failure      500  {object}  errcode.Error 	"内部错误"
+// @Router       /api/v1//user/email [post]
 func (u UserSignUp) EmailExists(c *gin.Context) {
 	srv := service.NewService(c)
 	param := &service.UserEmailExistsRequest{}
@@ -59,6 +79,16 @@ func (u UserSignUp) EmailExists(c *gin.Context) {
 	resp.Ok()
 }
 
+// UserNameExists godoc
+// @Summary     判断用户名是否已经被注册
+// @Tags         UserSignUp
+// @Accept       json
+// @Produce      json
+// @Param        user_name   body	string		true	"用户名"
+// @Success      200  {string}  string 			"成功"
+// @Failure      400  {object}  errcode.Error 	"请求错误"
+// @Failure      500  {object}  errcode.Error 	"内部错误"
+// @Router       /api/v1//user/name [post]
 func (u UserSignUp) UserNameExists(c *gin.Context) {
 	srv := service.NewService(c)
 	param := &service.UserNameExistsRequest{}
